# umap-rs

./: AGENTS.md  COMPARISON_ANALYSIS.md  Cargo.toml  DIVERGENCES.md  FUZZY_SIMPLICIAL_SET_COMPARISON_REPORT.md  HOW_UMAP_WORKS.md  LICENSE  PERFORMANCE_OPTIMIZATIONS.md  README.md  UMAP.md
examples/: Cargo.toml  README.md  mnist_demo.rs
src/: config.rs  distances.rs  embedding.rs  lib.rs  metric.rs
src/layout/: mod.rs  optimize_layout_aligned_euclidean.rs  optimize_layout_euclidean.rs  optimize_layout_generic.rs
src/umap/: compute_membership_strengths.rs  constants.rs  core.rs  find_ab_params.rs  fuzzy_simplicial_set.rs  init_graph_transform.rs  make_epochs_per_sample.rs  mod.rs  raise_disconnected_warning.rs  simplicial_set_embedding.rs  smooth_knn_dist.rs  umap.rs
src/utils/: clip.rs
umap/: layouts.py  umap_.py
umap-rs/: Cargo.toml
umap-rs/src/: config.rs  distances.rs  embedding.rs  lib.rs  manifold.rs  metric.rs  optimizer.rs  tests.rs
umap-rs/src/layout/: mod.rs  optimize_layout_euclidean.rs  optimize_layout_generic.rs
umap-rs/src/umap/: compute_membership_strengths.rs  constants.rs  find_ab_params.rs  fuzzy_simplicial_set.rs  make_epochs_per_sample.rs  mod.rs  simplicial_set_embedding.rs  smooth_knn_dist.rs
umap-rs/src/utils/: clip.rs  mod.rs  parallel_vec.rs
