[package]
name = "examples"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
mnist = { version = "0.6" }
ndarray-linalg = { version = "0.18", features = ["openblas-static"] }
plotters = { version = "0.3" }
ureq = { version = "3" }
flate2 = { version = "1" }
umap = { version = "0.1.0", path = "../umap-rs" }
ndarray = "0.17.1"
rand = "0.9.2"
