[package]
name = "examples"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bincode = "1.3"
clap = { version = "4", features = ["derive"] }
flate2 = { version = "1" }
mnist = { version = "0.6" }
ndarray = "0.17.1"
ndarray-linalg = { version = "0.18", features = ["openblas-static"] }
plotters = { version = "0.3" }
rand = "0.9.2"
umap-rs = { version = "0.1.0", path = "../umap-rs" }
ureq = { version = "3" }
