[package]
name = "umap-rs"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
description = "Fast, parallel Rust implementation of the core UMAP dimensionality reduction algorithm"
repository = "https://github.com/wilsonzlin/umap-rs"
documentation = "https://docs.rs/umap-rs"
homepage = "https://github.com/wilsonzlin/umap-rs"

[dependencies]
dashmap = { version = "6.1.0", features = ["rayon"] }
indicatif = "0.18.0"
itertools = "0.14.0"
ndarray = "0.17"
rand = "0.9.1"
rayon = "1.10.0"
sprs = "0.11.3"
tracing = "0.1.41"
typed-builder = "0.21.0"