[package]
name = "umap-rs"
version = "0.2.0"
edition = "2024"
license = "BSD-3-Clause"
description = "Fast, parallel Rust implementation of the core UMAP dimensionality reduction algorithm"
repository = "https://github.com/wilsonzlin/umap-rs"
documentation = "https://docs.rs/umap-rs"
homepage = "https://github.com/wilsonzlin/umap-rs"

[dependencies]
dashmap = { version = "6.1.0", features = ["rayon"] }
indicatif = "0.18.0"
itertools = "0.14.0"
ndarray = { version = "0.17", features = ["serde"] }
rand = "0.9.1"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
sprs = { version = "0.11.3", features = ["serde"] }
tracing = "0.1.41"
typed-builder = "0.21.0"

[dev-dependencies]
bincode = "1.3"
